--- a/plugin_frontend/package.json
+++ b/plugin_frontend/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "axios": "^1.7.9",
     "lucide-react": "^0.344.0",
+    "next": "^15.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
     "vite-react-typescript-starter": "file:"
   },
