--- a/Plugin-Backend/src/main/resources/application.properties
+++ b/Plugin-Backend/src/main/resources/application.properties
@@ -1,8 +1,15 @@
+# spring.application.name=Plugin
+# spring.jpa.hibernate.ddl-auto=update
+# spring.datasource.url=jdbc:mysql://localhost:3306/plugin_backend
+# spring.datasource.username=root
+# spring.datasource.password=pc02@December
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# logging.level.org.springframework.security=DEBUG
 spring.application.name=Plugin
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/plugin_backend
 spring.datasource.username=root
-spring.datasource.password=pc02@December
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 logging.level.org.springframework.security=DEBUG
 ## Flask server URL for the Python API
