--- a/Plugin-Backend/src/main/resources/application.properties
+++ b/Plugin-Backend/src/main/resources/application.properties
@@ -9,14 +9,13 @@ spring.application.name=Plugin
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/plugin_backend
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=pc02@December
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 logging.level.org.springframework.security=DEBUG
+spring.servlet.multipart.max-file-size=1GB
+spring.servlet.multipart.max-request-size=1GB
 ## Flask server URL for the Python API
 #python.api.url=http://localhost:5000
-#
-## API key for Google Generative AI (Gemini)
-#python.api.key=AIzaSyBZTAdmQ-cAi0wKD_z9hvSt_r5qjgm13lY
-#playht.script.path=C:\Users\ketan\OneDrive - iiit-b\Desktop\Sem 5\ByteSynergy_MERNIFY\Language_Learning_App\PythonUtills\python_script.py
-#playht.userId = "n0lm2HZQY5eX6nIfZhBOFRLxDhk2"
-#playht.apiKey = "5d44e5f8735b4d2dab23a34e97a8995f"
+cloudinary.cloud.name=ds8zfoutr
+cloudinary.api.key=138219315573231
+cloudinary.api.secret=UWfkikc4r4mdFpUF_3z_himq8dk
