--- a/plugin_frontend/vercel.json
+++ b/plugin_frontend/vercel.json
@@ -1,7 +1,8 @@
 {
+    "version": 2,
     "builds": [
       {
-        "src": "frontend/package.json",
+        "src": "package.json",
         "use": "@vercel/static-build",
         "config": {
           "distDir": "dist"
@@ -12,6 +13,12 @@
       {
         "src": "/(.*)",
         "dest": "/index.html"
+      }
+    ],
+    "rewrites": [
+      {
+        "source": "/(.*)",
+        "destination": "/index.html"
       }
     ]
   }
