--- a/Plugin-Backend/src/main/resources/application.properties
+++ b/Plugin-Backend/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.application.name=Plugin
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/plugin_backend
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=pc02@December
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 logging.level.org.springframework.security=DEBUG
 spring.servlet.multipart.max-file-size=1GB
